Made the modal buttons smaller by reducing the text content. Also, fixed some spacing between skills in project modals

--- a/frontend/src/App/styles/components/_btns.scss
+++ b/frontend/src/App/styles/components/_btns.scss
@@ -89,15 +89,15 @@
     &--github, &--url {
       @extend %btn;
       @include font-size-3;
-      width: 22rem;
-      height: 4rem;
+      width: 16rem;
+      height: 3.5rem;
       border: 1px solid transparent;
       border-radius:  2rem;
       color: $grey-12;
 
-      @media (max-width: 600px) {
-        width: 15rem;
-      }
+      // @media (max-width: 600px) {
+      //   width: 15rem;
+      // }
 
       &:focus {
         outline: none;
