--- a/frontend/src/App/styles/components/_modal.scss
+++ b/frontend/src/App/styles/components/_modal.scss
@@ -16,7 +16,7 @@
 	&__skills {
 		&--item {
       @include flexCenterCenter();
-      margin: 0.5rem;
+      margin: 0.5rem 0.5rem 0 0.5rem;
 		}
 
 		&--icon {
